Model works with google storage.  added api keys in user-config for google storage.

--- a/config/user-config.yml
+++ b/config/user-config.yml
@@ -2,4 +2,6 @@ development:
   sdb_user: sdb-api-key
   sdb_pass: sdb-secret-key
   calais_key: calais-api-key
+  google_storage_access_key_id: google-key
+  google_storage_secret_access_key: google-secret-key
 
